<resources>
    <string name="app_name">Pilem</string>
    <string name="iv_wallpaper_desc">Wallpaper image</string>
    <string name="btn_back_desc">Button back</string>
    <string name="btn_favorite_desc">Button favorite</string>
    <string name="iv_poster_desc">Poster image</string>
    <string name="iv_rating_desc">Image rating</string>
    <string name="over_10">/10</string>
    <string name="synopsis">Synopsis</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="title_favorite">Favorite</string>
    <string name="no_internet_message">Please check your internet connection</string>
    <string name="search_movie">Search movies</string>
</resources>