<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".moviedetail.MovieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/iv_wallpaper_desc"
                tools:src="@color/white_smoke"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_background">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster"
                android:layout_width="120dp"
                android:layout_height="175dp"
                android:foreground="@drawable/bg_card_poster"
                app:cardCornerRadius="7dp"
                app:layout_constraintStart_toStartOf="@id/gl_margin_start"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/iv_poster_desc"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/gl_margin_end"
                app:layout_constraintStart_toEndOf="@+id/cv_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1 January 2021" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/iv_rating_desc"
                android:src="@drawable/ic_star_yellow"
                app:layout_constraintStart_toEndOf="@+id/cv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_star"
                app:layout_constraintStart_toEndOf="@+id/iv_star"
                app:layout_constraintTop_toTopOf="@+id/iv_star"
                tools:text="8.2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_10"
                android:textColor="@color/gray_primary"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
                app:layout_constraintStart_toEndOf="@+id/tv_rating" />

            <androidx.legacy.widget.Space
                android:id="@+id/space2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_poster" />

            <Space
                android:id="@+id/space3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space2" />

            <View
                android:id="@+id/container_synopsis"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/black_primary"
                app:layout_constraintBottom_toTopOf="@id/space4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space3" />

            <View
                android:id="@+id/mark_synopsis"
                android:layout_width="6dp"
                android:layout_height="0dp"
                android:background="@color/yellow_primary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_header_synopsis"
                app:layout_constraintStart_toStartOf="@id/gl_margin_start"
                app:layout_constraintTop_toTopOf="@+id/tv_header_synopsis" />

            <TextView
                android:id="@+id/tv_header_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/mark_synopsis"
                app:layout_constraintTop_toTopOf="@id/container_synopsis" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="5dp"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/gl_margin_end"
                app:layout_constraintStart_toStartOf="@id/gl_margin_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_synopsis"
                tools:text="haha wkwk lol\nini synopsis\nlorem lorem lorem" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/more"
                android:textAlignment="textEnd"
                android:textColor="@color/gray_primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/gl_margin_end"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <Space
                android:id="@+id/space4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_more"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_margin_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_margin_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>